--- a/config/database.yml
+++ b/config/database.yml
@@ -19,7 +19,7 @@ default: &default
 
 development:
   <<: *default
-  database: aboutmybike_dev
+  database: aboutmybike_development
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
@@ -49,6 +49,6 @@ test:
 #
 production:
   <<: *default
-  database: aboutmybike
+  database: aboutmybike_production
   username: aboutmybike
   password: <%= ENV['ABOUTMYBIKE_DATABASE_PASSWORD'] %>
