--- a/package.json
+++ b/package.json
@@ -26,11 +26,18 @@
   },
   "homepage": "https://github.com/annr/aboutmybike#readme",
   "devDependencies": {
+    "babel-core": "^6.14.0",
+    "babel-loader": "^6.2.5",
+    "babel-preset-es2015": "^6.14.0",
     "bootstrap": "^4.0.0-alpha.3",
+    "jsx-loader": "^0.13.2",
     "node-sass": "^3.8.0",
     "webpack": "^1.13.2"
   },
   "dependencies": {
+    "babel-polyfill": "^6.13.0",
+    "jquery": "^3.1.0",
+    "json-loader": "^0.5.4",
     "lodash": "^3.6.0",
     "react": "^15.3.1",
     "react-dom": "^15.3.1"
