--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "test",
     "scss": "node-sass --output-style compressed -o dist/css src/scss",
-    "lint": "eslint src/components"
+    "lint": "eslint src/components",
+    "start": "node ./bin/www"
   },
   "repository": {
     "type": "git",
@@ -30,12 +31,22 @@
     "babel-loader": "^6.2.5",
     "babel-preset-es2015": "^6.14.0",
     "bootstrap": "^4.0.0-alpha.3",
+    "express": "^4.14.0",
     "jsx-loader": "^0.13.2",
     "lodash": "^4.15.0",
+    "mustache-express": "^1.2.2",
     "node-sass": "^3.8.0",
+    "pg-promise": "^5.3.3",
+    "react-router": "^2.8.1",
     "webpack": "^1.13.2"
   },
   "dependencies": {
+    "body-parser": "~1.15.1",
+    "cookie-parser": "~1.4.3",
+    "debug": "~2.2.0",
+    "express": "~4.14.0",
+    "morgan": "~1.7.0",
+    "serve-favicon": "~2.3.0",
     "babel-polyfill": "^6.13.0",
     "jquery": "^3.1.0",
     "json-loader": "^0.5.4",
