--- a/package.json
+++ b/package.json
@@ -5,8 +5,6 @@
   "main": "index.js",
   "scripts": {
     "test": "test",
-    "scss": "node-sass --output-style compressed -o dist/css src/scss",
-    "lint": "eslint src/components",
     "start": "node ./bin/www"
   },
   "repository": {
@@ -30,7 +28,7 @@
     "babel-core": "^6.14.0",
     "babel-loader": "^6.2.5",
     "babel-preset-es2015": "^6.14.0",
-    "bootstrap": "^4.0.0-alpha.3",
+    "bootstrap": "^3.3.7",
     "express": "^4.14.0",
     "jsx-loader": "^0.13.2",
     "lodash": "^4.15.0",
