lots of development. remove external script includes junk from index html templates that I added when troubleshooting Bootstrap. add Bootstrap to vendor bundle in webpack config. add a special WebpackPlugin like to the plugins array in webpack config for jQuery to solve issue with Bootstrap not finding it. replace index.html with a copy of the express template index.mustache for doing hot-reloading dev with webpack (instead of running the express server). also some junky dev with components.

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "test",
-    "start": "node ./bin/www"
+    "start": "webpack-dev-server --inline --content-base ."
   },
   "repository": {
     "type": "git",
