add react-tools to project so we don't have to globally install them. also fix back to Bikes component after changing entry path

--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "node-sass": "^3.8.0",
     "pg-promise": "^5.3.3",
     "react-router": "^2.8.1",
+    "react-tools": "^0.13.3",
     "webpack": "^1.13.2"
   },
   "dependencies": {
