--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "aboutmybike",
   "version": "1.0.0",
   "description": "The best bike is the one you have.",
-  "main": "./src/js/app.js",
+  "main": "index.js",
   "scripts": {
     "test": "test",
     "start": "webpack-dev-server --inline --content-base ."
@@ -28,7 +28,6 @@
     "babel-core": "^6.14.0",
     "babel-loader": "^6.2.5",
     "babel-preset-es2015": "^6.14.0",
-    "babel-preset-react": "^6.16.0",
     "bootstrap": "^3.3.7",
     "express": "^4.14.0",
     "jsx-loader": "^0.13.2",
@@ -37,20 +36,22 @@
     "node-sass": "^3.8.0",
     "pg-promise": "^5.3.3",
     "react-router": "^2.8.1",
-    "react-tools": "^0.13.3",
+    "redux-devtools": "^3.3.1",
     "webpack": "^1.13.2"
   },
   "dependencies": {
+    "babel-polyfill": "^6.13.0",
     "body-parser": "~1.15.1",
     "cookie-parser": "~1.4.3",
     "debug": "~2.2.0",
     "express": "~4.14.0",
-    "morgan": "~1.7.0",
-    "serve-favicon": "~2.3.0",
-    "babel-polyfill": "^6.13.0",
     "jquery": "^3.1.0",
     "json-loader": "^0.5.4",
+    "morgan": "~1.7.0",
     "react": "^15.3.1",
-    "react-dom": "^15.3.1"
+    "react-dom": "^15.3.1",
+    "react-redux": "^4.4.5",
+    "redux": "^3.6.0",
+    "serve-favicon": "~2.3.0"
   }
 }
