--- a/package.json
+++ b/package.json
@@ -27,12 +27,14 @@
     "babel-core": "^6.14.0",
     "babel-loader": "^6.2.5",
     "babel-preset-es2015": "^6.14.0",
+    "bluebird": "^3.4.6",
     "bootstrap": "^3.3.7",
     "express": "^4.14.0",
     "jsx-loader": "^0.13.2",
     "lodash": "^4.15.0",
     "mustache-express": "^1.2.2",
     "node-sass": "^3.8.0",
+    "pg-monitor": "^0.5.11",
     "pg-promise": "^5.3.3",
     "react-router": "^2.8.1",
     "redux-devtools": "^3.3.1",
