--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "The best bike is the one you have.",
   "scripts": {
     "test": "test",
-    "start": "webpack-dev-server --inline --content-base ."
+    "start": "webpack-dev-server --inline --content-base .",
+    "build-css": "node-sass --output-style compressed -o dist/css src/scss"
   },
   "repository": {
     "type": "git",
@@ -28,12 +29,11 @@
     "babel-loader": "^6.2.5",
     "babel-preset-es2015": "^6.14.0",
     "bluebird": "^3.4.6",
-    "bootstrap": "^3.3.7",
-    "express": "^4.14.0",
+    "bootstrap": "^4.0.0-alpha.5",
     "jsx-loader": "^0.13.2",
     "lodash": "^4.15.0",
     "mustache-express": "^1.2.2",
-    "node-sass": "^3.8.0",
+    "node-sass": "^3.10.1",
     "pg-monitor": "^0.5.11",
     "pg-promise": "^5.3.3",
     "react-router": "^2.8.1",
