--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "babel-core": "^6.14.0",
     "babel-loader": "^6.2.5",
     "babel-preset-es2015": "^6.14.0",
+    "babel-preset-react": "^6.16.0",
     "bluebird": "^3.4.6",
     "bootstrap": "^4.0.0-alpha.5",
     "jsx-loader": "^0.13.2",
