--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "jquery": "^3.1.0",
     "json-loader": "^0.5.4",
     "morgan": "~1.7.0",
+    "multer": "^1.2.0",
     "react": "^15.3.1",
     "react-dom": "^15.3.1",
     "react-redux": "^4.4.5",
