hide some files from git. move test scripts into subfolder and add that folder to project. exclude elastic beanstalk config files from project. update restore.sql -- the resources are now owned by the arobson postgres user.

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,12 @@
 npm-debug.log
 /node_modules/
 /pg-promise/db/errors.log
+main.bundle.js
+vendor.bundle.js
+.DS_Store
+
+# Elastic Beanstalk Files
+.elasticbeanstalk/*
+!.elasticbeanstalk/*.cfg.yml
+!.elasticbeanstalk/*.global.yml
+.ebextensions/*
