--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "version": "1.0.0",
   "description": "The best bike is the one you have.",
   "scripts": {
+    "start": "node ./bin/www",
+    "start-webpack": "webpack-dev-server --inline --content-base .",
     "test": "test",
-    "start": "webpack-dev-server --inline --content-base .",
     "build-css": "node-sass --output-style compressed -o dist/css src/scss"
   },
   "repository": {
@@ -29,7 +30,7 @@
     "babel-loader": "^6.2.5",
     "babel-preset-es2015": "^6.14.0",
     "babel-preset-react": "^6.16.0",
-    "bluebird": "^3.4.6",
+    "bluebird": "^3.4.7",
     "bootstrap": "^4.0.0-alpha.5",
     "jsx-loader": "^0.13.2",
     "lodash": "^4.15.0",
