--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "The best bike is the one you have.",
   "scripts": {
-    "start": "node ./bin/www",
+    "start": "DEBUG=express:* node ./bin/www",
     "start-webpack": "webpack-dev-server --inline --content-base .",
     "test": "test",
     "build-css": "node-sass --output-style compressed -o dist/css src/scss"
@@ -30,31 +30,30 @@
     "babel-loader": "^6.2.5",
     "babel-preset-es2015": "^6.14.0",
     "babel-preset-react": "^6.16.0",
-    "bluebird": "^3.4.7",
     "bootstrap": "^4.0.0-alpha.5",
     "jsx-loader": "^0.13.2",
-    "lodash": "^4.15.0",
-    "mustache-express": "^1.2.2",
     "node-sass": "^3.10.1",
-    "pg-monitor": "^0.5.11",
-    "pg-promise": "^5.3.3",
-    "react-router": "^2.8.1",
     "redux-devtools": "^3.3.1",
     "webpack": "^1.13.2"
   },
   "dependencies": {
     "babel-polyfill": "^6.13.0",
+    "bluebird": "^3.4.7",
     "body-parser": "~1.15.1",
     "cookie-parser": "~1.4.3",
     "debug": "~2.2.0",
     "express": "~4.14.0",
     "jquery": "^3.1.0",
     "json-loader": "^0.5.4",
+    "lodash": "^4.15.0",
     "morgan": "~1.7.0",
     "multer": "^1.2.0",
+    "pg-monitor": "^0.5.11",
+    "pg-promise": "^5.3.3",
     "react": "^15.3.1",
     "react-dom": "^15.3.1",
     "react-redux": "^4.4.5",
+    "react-router": "^2.8.1",
     "redux": "^3.6.0",
     "serve-favicon": "~2.3.0"
   }
