--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "start": "DEBUG=express:* node ./bin/www",
     "start-webpack": "webpack-dev-server --inline --content-base .",
     "test": "test",
-    "build-css": "node-sass --output-style compressed -o dist/css src/scss"
+    "build-css": "node-sass --output-style expanded -o dist/css src/scss",
+    "watch": "webpack -- --watch"
   },
   "repository": {
     "type": "git",
@@ -30,7 +31,6 @@
     "babel-loader": "^6.2.5",
     "babel-preset-es2015": "^6.14.0",
     "babel-preset-react": "^6.16.0",
-    "bootstrap": "^4.0.0-alpha.5",
     "jsx-loader": "^0.13.2",
     "node-sass": "^3.10.1",
     "redux-devtools": "^3.3.1",
@@ -41,7 +41,7 @@
     "bluebird": "^3.4.7",
     "body-parser": "~1.15.1",
     "cookie-parser": "~1.4.3",
-    "debug": "~2.2.0",
+    "debug": "~2.6.9",
     "express": "~4.14.0",
     "jquery": "^3.1.0",
     "json-loader": "^0.5.4",
