--- a/package.json
+++ b/package.json
@@ -30,7 +30,11 @@
     "babel-loader": "^6.2.5",
     "babel-preset-es2015": "^6.14.0",
     "babel-preset-react": "^6.16.0",
-    "jsx-loader": "^0.13.2",
+    "eslint": "^5.5.0",
+    "eslint-config-airbnb": "^17.1.0",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-jsx-a11y": "^6.1.1",
+    "eslint-plugin-react": "^7.11.1",
     "node-sass": "^3.10.1",
     "redux-devtools": "^3.3.1",
     "webpack": "^1.13.2"
@@ -50,10 +54,11 @@
     "multer": "^1.2.0",
     "pg-monitor": "^0.5.11",
     "pg-promise": "^5.3.3",
+    "popper.js": "^1.14.4",
     "react": "^15.3.1",
     "react-dom": "^15.3.1",
     "react-redux": "^4.4.5",
-    "react-router": "^2.8.1",
+    "react-router-dom": "^4.3.1",
     "redux": "^3.6.0",
     "serve-favicon": "~2.3.0"
   }
